force-app/main/default/objects/ServiceContractAll__c/fields/SubmitMethodWeb__c.field-meta.xml
<CustomField>
    <fullName>SubmitMethodWeb__c</fullName>
    <label>提出方法_WEB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>