force-app/main/default/objects/ServiceContractAll__c/fields/TempNumGroup__c.field-meta.xml
<CustomField>
    <fullName>TempNumGroup__c</fullName>
    <label>一時数字G</label>
    <length>255</length>
    <type>Text</type>
</CustomField>