force-app/main/default/objects/ServiceContractAll__c/fields/TransferChargesConfirm__c.field-meta.xml
<CustomField>
    <fullName>TransferChargesConfirm__c</fullName>
    <label>振込手数料確定</label>
    <length>255</length>
    <type>Text</type>
</CustomField>