force-app/main/default/objects/ServiceContractAll__c/fields/TransferChargesNote__c.field-meta.xml
<CustomField>
    <fullName>TransferChargesNote__c</fullName>
    <label>振込手数料備考</label>
    <length>255</length>
    <type>Text</type>
</CustomField>