force-app/main/default/objects/ServiceContractAll__c/fields/TransferChargesUnitPrice__c.field-meta.xml
<CustomField>
    <fullName>TransferChargesUnitPrice__c</fullName>
    <label>振込手数料単価</label>
    <length>255</length>
    <type>Text</type>
</CustomField>