force-app/main/default/objects/ServiceContractAll__c/fields/TransferDate__c.field-meta.xml
<CustomField>
    <fullName>TransferDate__c</fullName>
    <label>異動期</label>
    <length>255</length>
    <type>Text</type>
</CustomField>