force-app/main/default/objects/ServiceContractAll__c/fields/WebQuestionnaireNotTargetIs__c.field-meta.xml
<CustomField>
    <fullName>WebQuestionnaireNotTargetIs__c</fullName>
    <label>WEBアンケート対象外フラグ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>